# AgentMesh

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  release.yml
alembic/: env.py
alembic/versions/: 20260715_0001_initial_tasks.py  20260716_0002_async_execution.py  20260716_0003_normalize_jsonb.py  20260716_0004_agent_registry.py  20260716_0005_artifact_service.py  20260716_0006_task_pause_resume.py  20260716_0007_tool_invocations.py  20260716_0008_observability_usage.py  20260717_0009_outbox_quarantine.py  20260717_0010_messaging_retention.py  20260717_0011_reviewed_execution.py  20260717_0012_coordinated_dag.py  20260717_0013_handoff_lifecycle.py  20260718_0014_task_budget_admission.py  20260718_0015_human_task_resolution.py  (+18 more)
docs/: README.md  glossary.md  implementation-status.md  roadmap.md  v1-completion-scope.md
tests/: __init__.py  conftest.py  fakes.py  test_a2a_client.py  test_a2a_delegation.py  test_a2a_reconciliation_worker.py  test_a2a_registry.py  test_activity_timeline.py  test_api.py  test_artifact_domain.py  test_artifact_service.py  test_budget_admission.py  test_compose_e2e.py  test_config.py  test_contract_compatibility.py  test_coordinated_execution.py  test_credentials.py  test_domain_tasks.py  test_execution_worker.py  test_feature_gates.py  test_handoffs.py  test_identity_rbac.py  test_mcp_registry.py  test_mcp_safe_writes.py  test_mcp_streamable_http.py  test_mcp_tools.py  test_messaging.py  test_messaging_retention_migration.py  test_model_agent.py  test_observability.py  test_persistent_identity.py  test_planning.py  test_policy_approval.py  test_pricing.py  test_quota_admission.py  test_realtime_events.py  test_registry_domain.py  test_registry_service.py  test_relay_entrypoint.py  test_retention.py  (+4 more)
(+207 files in other folders)
